# axum_demo

./: .env.example  .gitignore  Cargo.toml
migrations/: 001_create_users_table.sql
src/: config.rs  database.rs  errors.rs  extractors.rs  jwt.rs  lib.rs  logging.rs  main.rs  middleware.rs  response.rs  routes.rs  utils.rs
src/controllers/: article_controller.rs  auth_controller.rs  health_controller.rs  mod.rs  user_controller.rs
src/entities/: article.rs  mod.rs  user.rs
src/models/: article.rs  mod.rs  user.rs
src/repositories/: article_repository.rs  mod.rs  user_repository.rs
src/routes/: articles.rs  auth.rs  health.rs  mod.rs  users.rs
src/services/: article_service.rs  auth_service.rs  mod.rs  user_service.rs
