[package]
name = "axum_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web 框架
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "fs"] }

# 数据库 ORM
sea-orm = { version = "0.12", features = ["runtime-tokio-native-tls", "sqlx-mysql", "macros", "chrono", "uuid"] }
# sea-orm-migration = { version = "0.12", features = ["runtime-tokio-native-tls", "sqlx-mysql"] }  # 暂时注释，避免编译错误

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 工具库
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
bcrypt = "0.15"
jsonwebtoken = "9.0"
